# ideal-voxelsort

./: CMakeLists.txt  main.cpp
examples/: KDTreeVectorOfVectorsAdaptor.h
include/: KDTreeVectorOfVectorsAdaptor.h  make_tree.h  nanoflann.hpp  stdafx.h  vtk_vis.h
src/: main.cpp  make_tree.cpp  vtk_viz.cpp
